--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-route": "^1.5.8",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "bootstrap": "~3.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
+    "csv-to-json-stream": "0.0.5",
+    "csvtojson": "^1.0.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
@@ -22,6 +25,7 @@
     "mongoose": "^4.4.10",
     "monk": "~1.0.1",
     "morgan": "~1.6.1",
+    "node-persist": "^2.0.2",
     "nodemon": "^1.9.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
